--- a/bigtext/index.html
+++ b/bigtext/index.html
@@ -65,7 +65,7 @@ The following options are supported:\n\
                 if(savedText == null || savedText == undefined) {
                     window.localStorage.setItem("text", "");
                 }
-                if(window.localStorage.getItem("options"); == null || window.localStorage.getItem("options"); == undefined) {
+                if(window.localStorage.getItem("options") == null || window.localStorage.getItem("options") == undefined) {
                     window.localStorage.setItem("options", "default");
                 }
                 
