made sharing hashes not change saved text

--- a/bigtext/index.html
+++ b/bigtext/index.html
@@ -79,6 +79,7 @@ The following options are supported:\n\
                 if(hash.length > 1) {
                     textarea.value = hash.slice(1).replace("%20", " ");
                     saveoptions = false;
+                    doloop = false;
                 }
                 
                 //help mode initializes if the first option is help
